welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:8: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if(estFaceMur() == true){
  ^SnakeBuggle:18: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return(x)
  ^